Change dockerfile to memory and memory heap